--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 blinker==1.8.2
 click==8.1.7
 Flask==3.0.3
+gunicorn==23.0.0
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 numpy==2.0.2
+packaging==24.1
 pandas==2.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.2
